# IsingPTWHAM

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  run_ising.slurm
analysis/: MHA.py  plot_histograms.py
bench/: CMakeLists.txt
examples/: CMakeLists.txt
examples/10A-mpi-helloworld/: main.cpp
include/: io.h  ising.h  mpi_pt.h  pt.h  rnd.h  settings.h  stats.h
settings/: settings.json
source/: io.cpp  ising.cpp  main.cpp  mpi_pt.cpp  pt.cpp  rnd.cpp  stats.cpp
source/ising/: ising.cpp
tests/: CMakeLists.txt  test-ising.cpp
